--- a/templates/lending/index.html
+++ b/templates/lending/index.html
@@ -677,26 +677,26 @@
     </section>
 
     
-    <footer class="site-footer">
+    <footer class="site-footer col-md-12 pt-0 pb-0">
       <div class="container">
         <div class="row">
-          <div class="col-md-8">
-            <div class="row">
-              <div class="col-md-5">
-                <h2 class="footer-heading mb-4">About Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam voluptatum autem. Amet aliquid nesciunt veritatis aliquam.</p>
-              </div>
-              <div class="col-md-3 ml-auto">
-                <h2 class="footer-heading mb-4">Quick Links</h2>
-                <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li><a href="#">Contact Us</a></li>
-                </ul>
-              </div>
-              
-            </div>
+          <div class="col-md-12">
+{#            <div class="row">#}
+{#              <div class="col-md-5">#}
+{#                <h2 class="footer-heading mb-4">About Us</h2>#}
+{#                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam voluptatum autem. Amet aliquid nesciunt veritatis aliquam.</p>#}
+{#              </div>#}
+{#              <div class="col-md-3 ml-auto">#}
+{#                <h2 class="footer-heading mb-4">Quick Links</h2>#}
+{#                <ul class="list-unstyled">#}
+{#                  <li><a href="#">About Us</a></li>#}
+{#                  <li><a href="#">Services</a></li>#}
+{#                  <li><a href="#">Testimonials</a></li>#}
+{#                  <li><a href="#">Contact Us</a></li>#}
+{#                </ul>#}
+{#              </div>#}
+{##}
+{#            </div>#}
           </div>
 {#          <div class="col-md-4">#}
 {#            <div class="mb-4">#}
@@ -708,9 +708,9 @@
 {#                  <button class="btn btn-primary text-black" type="button" id="button-addon2">Send</button>#}
 {#                </div>#}
 {#              </div>#}
-{#            </form>  #}
+{#            </form>#}
 {#            </div>#}
-{#            #}
+{##}
 {#            <div class="">#}
 {#              <h2 class="footer-heading mb-4">Follow Us</h2>#}
 {#                <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>#}
@@ -722,7 +722,7 @@
 {##}
 {#          </div>#}
         </div>
-        <div class="row pt-5 mt-5 text-center">
+        <div class="row pt-1 mt-1 text-center">
           <div class="col-md-12">
             <div class="border-top pt-5">
             <p>
