Clear index.html

--- a/templates/lending/index.html
+++ b/templates/lending/index.html
@@ -5,35 +5,21 @@
     <title>Pointer &mdash; Website by Colorlib</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
-    
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'istyle.css' %}">
-
-
-      <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
-
-      <link rel="stylesheet" href="{% static 'jquery-ui.css' %}">
-
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'jquery-ui.css' %}">
     <link rel="stylesheet" href="{% static 'owl.carousel.min.css'%}">
-
     <link rel="stylesheet" href="{% static 'owl.theme.default.min.css' %}">
-
     <link rel="stylesheet" href="{% static 'jquery.fancybox.min.css' %}">
-
     <link rel="stylesheet" href="{% static 'bootstrap-datepicker.css' %}">
-
     <link rel="stylesheet" href="{% static 'flaticon.css' %}">
-
     <link rel="stylesheet" href="{% static 'aos.css' %}">
-
     <link rel="stylesheet" href="{% static 'style.css' %}">
 
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-  
   <div class="site-wrap">
-
     <div class="site-mobile-menu site-navbar-target">
       <div class="site-mobile-menu-header">
         <div class="site-mobile-menu-close mt-3">
@@ -42,13 +28,9 @@
       </div>
       <div class="site-mobile-menu-body"></div>
     </div>
-   
-    
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
-
       <div class="container">
         <div class="row align-items-center">
-          
           <div class="col-6 col-xl-2">
             <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0">ABKey<span class="text-primary">.</span> </a></h1>
           </div>
@@ -67,22 +49,15 @@
               </ul>
             </nav>
           </div>
-
-
-          <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-black float-right"><span class="icon-menu h3"></span></a></div>
-
+          <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;">
+              <a href="#" class="site-menu-toggle js-menu-toggle text-black float-right"><span class="icon-menu h3"></span></a>
+         </div>
         </div>
       </div>
-      
     </header>
-
-  
-     
     <div class="site-blocks-cover overlay" style="background-image: url({% static 'hero_2.jpg' %});" data-aos="fade" id="home-section">
       <div class="container">
         <div class="row align-items-center justify-content-center">
-
-          
               <div class="col-md-6 mt-lg-5 text-center">
                 <h1>Analytical Business Key</h1>
                 <p class="mb-5">Ключ к Вашему успешному бизнесу.</p>
@@ -90,191 +65,13 @@
 {#                  <a href="#" class="btn btn-primary mr-2 mb-2">Get Started</a>#}
 {#                </div>#}
               </div>
-            
+
         </div>
       </div>
-    </div>  
-
-    
-{#    <div class="site-section cta-big-image" id="about-section">#}
-{#      <div class="container">#}
-{#        #}
-{#        <img src="{% static 'img_big_1.jpg' %}" alt="Image" class="img-fluid">#}
-{#        <div class="img-box">#}
-{#          <span class="sub-title">Creative Skills</span>#}
-{#          <h2>Create Your Own Web Masterpiece</h2>#}
-{#          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis eveniet, voluptatem harum provident iusto modi explicabo! Aperiam velit reiciendis, eius impedit ea necessitatibus facilis nobis ipsum, architecto cum, doloribus nesciunt.</p>#}
-{#          <p><a href="#" class="btn btn-outline-dark">Read More</a></p>#}
-{#        </div>#}
-{#      </div>  #}
-{#    </div>#}
-
-    
-{#    <section class="site-section border-bottom" id="team-section">#}
-{#      <div class="container">#}
-{#        <div class="row mb-5">#}
-{#          <div class="col-md-5 text-left">#}
-{#            <h2 class="section-title mb-3">Our Dedicated <br> Professionals</h2>#}
-{#            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus minima neque tempora reiciendis.</p>#}
-{#          </div>#}
-{#        </div>#}
-{#        <div class="row">#}
-{#          #}
-{##}
-{#          <div class="col-md-6 col-lg-3 mb-4">#}
-{#            <div class="team-member">#}
-{#              <figure>#}
-{#                <ul class="social">#}
-{#                  <li><a href="#"><span class="icon-facebook"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-twitter"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-linkedin"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-instagram"></span></a></li>#}
-{#                </ul>#}
-{#                <img src="{% static 'person_5.jpg' %}" alt="Image" class="img-fluid">#}
-{#              </figure>#}
-{#              <div class="p-3">#}
-{#                <h3>Kaiara Spencer</h3>#}
-{#                <span class="position">Product Manager</span>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div class="col-md-6 col-lg-3 mb-4">#}
-{#            <div class="team-member">#}
-{#              <figure>#}
-{#                <ul class="social">#}
-{#                  <li><a href="#"><span class="icon-facebook"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-twitter"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-linkedin"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-instagram"></span></a></li>#}
-{#                </ul>#}
-{#                <img src="../../lending/media/images/person_6.jpg" alt="Image" class="img-fluid">#}
-{#              </figure>#}
-{#              <div class="p-3">#}
-{#                <h3>Dave Simpson</h3>#}
-{#                <span class="position">Product Manager</span>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div class="col-md-6 col-lg-3 mb-4">#}
-{#            <div class="team-member">#}
-{#              <figure>#}
-{#                <ul class="social">#}
-{#                  <li><a href="#"><span class="icon-facebook"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-twitter"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-linkedin"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-instagram"></span></a></li>#}
-{#                </ul>#}
-{#                <img src="../../lending/media/images/person_7.jpg" alt="Image" class="img-fluid">#}
-{#              </figure>#}
-{#              <div class="p-3">#}
-{#                <h3>Ben Thompson</h3>#}
-{#                <span class="position">Product Manager</span>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div class="col-md-6 col-lg-3 mb-4">#}
-{#            <div class="team-member">#}
-{#              <figure>#}
-{#                <ul class="social">#}
-{#                  <li><a href="#"><span class="icon-facebook"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-twitter"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-linkedin"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-instagram"></span></a></li>#}
-{#                </ul>#}
-{#                <img src="../../lending/media/images/person_8.jpg" alt="Image" class="img-fluid">#}
-{#              </figure>#}
-{#              <div class="p-3">#}
-{#                <h3>Kyla Stewart</h3>#}
-{#                <span class="position">Product Manager</span>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div class="col-md-6 col-lg-3 mb-4">#}
-{#            <div class="team-member">#}
-{#              <figure>#}
-{#                <ul class="social">#}
-{#                  <li><a href="#"><span class="icon-facebook"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-twitter"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-linkedin"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-instagram"></span></a></li>#}
-{#                </ul>#}
-{#                <img src="../../lending/media/images/person_1.jpg" alt="Image" class="img-fluid">#}
-{#              </figure>#}
-{#              <div class="p-3">#}
-{#                <h3>Kaiara Spencer</h3>#}
-{#                <span class="position">Product Manager</span>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div class="col-md-6 col-lg-3 mb-4">#}
-{#            <div class="team-member">#}
-{#              <figure>#}
-{#                <ul class="social">#}
-{#                  <li><a href="#"><span class="icon-facebook"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-twitter"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-linkedin"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-instagram"></span></a></li>#}
-{#                </ul>#}
-{#                <img src="../../lending/media/images/person_2.jpg" alt="Image" class="img-fluid">#}
-{#              </figure>#}
-{#              <div class="p-3">#}
-{#                <h3>Dave Simpson</h3>#}
-{#                <span class="position">Product Manager</span>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div class="col-md-6 col-lg-3 mb-4">#}
-{#            <div class="team-member">#}
-{#              <figure>#}
-{#                <ul class="social">#}
-{#                  <li><a href="#"><span class="icon-facebook"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-twitter"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-linkedin"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-instagram"></span></a></li>#}
-{#                </ul>#}
-{#                <img src="../../lending/media/images/person_3.jpg" alt="Image" class="img-fluid">#}
-{#              </figure>#}
-{#              <div class="p-3">#}
-{#                <h3>Ben Thompson</h3>#}
-{#                <span class="position">Product Manager</span>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div class="col-md-6 col-lg-3 mb-4">#}
-{#            <div class="team-member">#}
-{#              <figure>#}
-{#                <ul class="social">#}
-{#                  <li><a href="#"><span class="icon-facebook"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-twitter"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-linkedin"></span></a></li>#}
-{#                  <li><a href="#"><span class="icon-instagram"></span></a></li>#}
-{#                </ul>#}
-{#                <img src="../../lending/media/images/person_4.jpg" alt="Image" class="img-fluid">#}
-{#              </figure>#}
-{#              <div class="p-3">#}
-{#                <h3>Chris Stewart</h3>#}
-{#                <span class="position">Product Manager</span>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{##}
-{##}
-{#          #}
-{#        </div>#}
-{#      </div>#}
-{#    </section>#}
-
-
+    </div>
     <section class="site-section">
       <div class="container">
-        
+
         <div class="row">
           <div class="col-lg-6">
 
@@ -302,7 +99,7 @@
                 </p>
 
 {#                <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>#}
-            
+
           </div>
         </div>
       </div>
@@ -345,7 +142,7 @@
 
 
 
-    
+
 
     <section class="site-section border-bottom bg-light" id="services-section">
       <div class="container">
@@ -547,9 +344,9 @@
 {#        </div>#}
 {#      </div>#}
 {#    </section>#}
-  
-    
-    
+
+
+
 
 {#    <section class="site-section" id="blog-section">#}
 {#      <div class="container">#}
@@ -589,11 +386,11 @@
 {#            </div> #}
 {#          </div>#}
 {#          #}
-{#        </div>#}
-{#      </div>#}
-{#    </section>#}
+        </div>
+      </div>
+    </section>
 
-   
+
 
 
     <section class="site-section col-12 bg-light" id="contact-section">
@@ -609,7 +406,7 @@
 {#+++++++++++++++++++++++++++++++++++++++++++++ Форма сообщения ++++++++++++++++++++++++++++++++++++++++++++++++++++++#}
           <div class="col-md-7 mb-5">
             <form action="{% url 'message_sent' %}" class="p-5 bg-white">
-              
+
               <h2 class="h4 text-black mb-5">Форма обратной связи</h2>
 
               <div class="row form-group">
@@ -625,7 +422,7 @@
               </div>
 
               <div class="row form-group">
-                
+
                 <div class="col-md-12">
                   <label class="text-black" for="email">Ваша электронная почта</label>
                   <input type="email" id="email" class="form-control">
@@ -633,7 +430,7 @@
               </div>
 
               <div class="row form-group">
-                
+
                 <div class="col-md-12">
                   <label class="text-black" for="subject">Тема</label>
                   <input type="text" id="subject" class="form-control">
@@ -653,13 +450,13 @@
                 </div>
               </div>
 
-  
+
             </form>
           </div>
 {#--------------------------------------------- Форма сообщения ------------------------------------------------------#}
 
           <div class="col-md-5">
-            
+
             <div class="p-4 mb-3 bg-white">
 {#              <p class="mb-0 font-weight-bold">Address</p>#}
 {#              <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>#}
@@ -671,13 +468,13 @@
               <p class="mb-0"><a href="#">businesservice@abkey.ru</a></p>
 
             </div>
-            
+
           </div>
         </div>
       </div>
     </section>
 
-    
+
     <footer class="site-footer col-md-12 pt-0 pb-0">
       <div class="container">
         <div class="row">
@@ -733,7 +530,7 @@
       </p>
             </div>
           </div>
-          
+
         </div>
       </div>
     </footer>
@@ -754,5 +551,6 @@
   <script src="{% static 'jquery.fancybox.min.js' %}"></script>
   <script src="{% static 'jquery.sticky.js' %}"></script>
   <script src="{% static 'main.js' %}"></script>
+
   </body>
 </html>
