--- a/templates/lending/index.html
+++ b/templates/lending/index.html
@@ -65,16 +65,13 @@
 {#                  <a href="#" class="btn btn-primary mr-2 mb-2">Get Started</a>#}
 {#                </div>#}
               </div>
-
         </div>
       </div>
     </div>
     <section class="site-section">
       <div class="container">
-
         <div class="row">
           <div class="col-lg-6">
-
             <div class="owl-carousel slide-one-item-alt">
               <img src="{% static 'slide_1.jpg' %}" alt="Image" class="img-fluid">
               <img src="{% static 'slide_2.jpg' %}" alt="Image" class="img-fluid">
@@ -84,7 +81,6 @@
             <div class="custom-direction">
               <a href="#" class="custom-prev">Prev</a><a href="#" class="custom-next">Next</a>
             </div>
-
           </div>
           <div class="col-lg-5 ml-auto">
               <br>
@@ -104,45 +100,6 @@
         </div>
       </div>
     </section>
-
-{#    <section class="site-section">#}
-{#      <div class="container">#}
-{#        <div class="row mb-5">#}
-{#          <div class="col-12">#}
-{#            <h2 class="section-title mb-3">Our Approach</h2>#}
-{#          </div>#}
-{#        </div>#}
-{#        <div class="row">#}
-{#          <div class="col-md-6 col-lg-4">#}
-{#            <div class=" box-with-humber">#}
-{#              <h2 class="text-black"><span class="text-primary">01.</span>Creative</h2>#}
-{#              <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et praesentium eos nulla qui commodi consectetur beatae fugiat. Veniam iste rerum perferendis.</p>#}
-{#              #}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div class="col-md-6 col-lg-4">#}
-{#            <div class=" box-with-humber">#}
-{#              <h2 class="text-black"><span class="text-primary">02.</span>Strategy</h2>#}
-{#              <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et praesentium eos nulla qui commodi consectetur beatae fugiat. Veniam iste rerum perferendis.</p>#}
-{#              #}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div class="col-md-6 col-lg-4">#}
-{#            <div class=" box-with-humber">#}
-{#              <h2 class="text-black"><span class="text-primary">03.</span>Production</h2>#}
-{#              <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et praesentium eos nulla qui commodi consectetur beatae fugiat. Veniam iste rerum perferendis.</p>#}
-{#              #}
-{#            </div>#}
-{#          </div>#}
-{#        </div>#}
-{#      </div>#}
-{#    </section>#}
-
-
-
-
 
     <section class="site-section border-bottom bg-light" id="services-section">
       <div class="container">
@@ -188,210 +145,9 @@
               </div>
             </div>
           </div>
-
-
-{#          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="300">#}
-{#            <div class="unit-4 d-flex">#}
-{#              <div class="unit-4-icon mr-4"><span class="text-primary icon-beenhere"></span></div>#}
-{#              <div>#}
-{#                <h3>Best Support</h3>#}
-{#                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>#}
-{#                <p><a href="#">Learn More</a></p>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{#          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="400">#}
-{#            <div class="unit-4 d-flex">#}
-{#              <div class="unit-4-icon mr-4"><span class="text-primary icon-business_center"></span></div>#}
-{#              <div>#}
-{#                <h3>Finest Quality</h3>#}
-{#                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>#}
-{#                <p><a href="#">Learn More</a></p>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{#          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="500">#}
-{#            <div class="unit-4 d-flex">#}
-{#              <div class="unit-4-icon mr-4"><span class="text-primary icon-cloud_done"></span></div>#}
-{#              <div>#}
-{#                <h3>Real Solutions</h3>#}
-{#                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>#}
-{#                <p><a href="#">Learn More</a></p>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#        </div>#}
-{#      </div>#}
-{#    </section>#}
-
-{#    <section class="site-section testimonial-wrap" id="testimonials-section">#}
-{#      <div class="container">#}
-{#        <div class="row mb-5">#}
-{#          <div class="col-12 text-center">#}
-{#            <h2 class="section-title mb-3">Testimonials</h2>#}
-{#          </div>#}
-{#        </div>#}
-{#      </div>#}
-{#      <div class="slide-one-item home-slider owl-carousel">#}
-{#          <div>#}
-{#            <div class="testimonial">#}
-{#              #}
-{#              <blockquote class="mb-5">#}
-{#                <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde reprehenderit aperiam quaerat fugiat repudiandae explicabo animi minima fuga beatae illum eligendi incidunt consequatur. Amet dolores excepturi earum unde iusto.&rdquo;</p>#}
-{#              </blockquote>#}
-{##}
-{#              <figure class="mb-4 d-flex align-items-center justify-content-center">#}
-{#                <div><img src="../../lending/media/images/person_3.jpg" alt="Image" class="w-50 img-fluid mb-3"></div>#}
-{#                <p>John Smith</p>#}
-{#              </figure>#}
-{#            </div>#}
-{#          </div>#}
-{#          <div>#}
-{#            <div class="testimonial">#}
-{##}
-{#              <blockquote class="mb-5">#}
-{#                <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde reprehenderit aperiam quaerat fugiat repudiandae explicabo animi minima fuga beatae illum eligendi incidunt consequatur. Amet dolores excepturi earum unde iusto.&rdquo;</p>#}
-{#              </blockquote>#}
-{#              <figure class="mb-4 d-flex align-items-center justify-content-center">#}
-{#                <div><img src="../../lending/media/images/person_2.jpg" alt="Image" class="w-50 img-fluid mb-3"></div>#}
-{#                <p>Christine Aguilar</p>#}
-{#              </figure>#}
-{#              #}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div>#}
-{#            <div class="testimonial">#}
-{##}
-{#              <blockquote class="mb-5">#}
-{#                <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde reprehenderit aperiam quaerat fugiat repudiandae explicabo animi minima fuga beatae illum eligendi incidunt consequatur. Amet dolores excepturi earum unde iusto.&rdquo;</p>#}
-{#              </blockquote>#}
-{#              <figure class="mb-4 d-flex align-items-center justify-content-center">#}
-{#                <div><img src="{%  static 'person_4.jpg' %}" alt="Image" class="w-50 img-fluid mb-3"></div>#}
-{#                <p>Robert Spears</p>#}
-{#              </figure>#}
-{##}
-{#              #}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div>#}
-{#            <div class="testimonial">#}
-{##}
-{#              <blockquote class="mb-5">#}
-{#                <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde reprehenderit aperiam quaerat fugiat repudiandae explicabo animi minima fuga beatae illum eligendi incidunt consequatur. Amet dolores excepturi earum unde iusto.&rdquo;</p>#}
-{#              </blockquote>#}
-{#              <figure class="mb-4 d-flex align-items-center justify-content-center">#}
-{#                <div><img src="{%  static 'person_4.jpg' %}" alt="Image" class="w-50 img-fluid mb-3"></div>#}
-{#                <p>Bruce Rogers</p>#}
-{#              </figure>#}
-{##}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#        </div>#}
-{#    </section>#}
-{##}
-{#    <section class="site-section" id="about-section">#}
-{#      <div class="container">#}
-{#        <div class="row mb-5">#}
-{#          #}
-{#          <div class="col-md-5 ml-auto mb-5 order-md-2" data-aos="fade">#}
-{#            #}
-{##}
-{#            <div class="owl-carousel slide-one-item-alt">#}
-{#              <img src="{% static 'slide_1.jpg' %}" alt="Image" class="img-fluid">#}
-{#              <img src="{% static 'slide_2.jpg' %}" alt="Image" class="img-fluid">#}
-{#              <img src="{% static 'slide_3.jpg' %}" alt="Image" class="img-fluid">#}
-{#              <img src="{% static 'slide_4.jpg' %}" alt="Image" class="img-fluid">#}
-{#            </div>#}
-{#            <div class="custom-direction">#}
-{#              <a href="#" class="custom-prev">Prev</a><a href="#" class="custom-next">Next</a>#}
-{#            </div>#}
-{#          </div>#}
-{#          <div class="col-md-6 order-md-1" data-aos="fade">#}
-{##}
-{#            <div class="row">#}
-{##}
-{#              #}
-{#              <div class="col-12 mb-4">#}
-{#                <h2 class="section-title mb-3">Consulting Agency It's Best</h2>#}
-{#              </div>#}
-{#              <div class="col-md-12 mb-md-5 mb-0 col-lg-6">#}
-{#                <div class="unit-4">#}
-{#                  <div class="unit-4-icon mr-4 mb-3"><span class="text-primary icon-adb"></span></div>#}
-{#                  <div>#}
-{#                    <h3>Web &amp; Mobile Specialties</h3>#}
-{#                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis consect.</p>#}
-{#                    <p class="mb-0"><a href="#">Learn More</a></p>#}
-{#                  </div>#}
-{#                </div>#}
-{#              </div>#}
-{#              <div class="col-md-12 mb-md-5 mb-0 col-lg-6">#}
-{#                <div class="unit-4">#}
-{#                  <div class="unit-4-icon mr-4 mb-3"><span class="text-primary icon-assignment"></span></div>#}
-{#                  <div>#}
-{#                    <h3>Intuitive Thinkers</h3>#}
-{#                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis.</p>#}
-{#                    <p class="mb-0"><a href="#">Learn More</a></p>#}
-{#                  </div>#}
-{#                </div>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{#          #}
-{#        </div>#}
-{#      </div>#}
-{#    </section>#}
-
-
-
-
-{#    <section class="site-section" id="blog-section">#}
-{#      <div class="container">#}
-{#        <div class="row mb-5">#}
-{#          <div class="col-12 text-center">#}
-{#            <h3 class="section-sub-title">Blog</h3>#}
-{#            <h2 class="section-title mb-3">Our Blog Posts</h2>#}
-{#          </div>#}
-{#        </div>#}
-{##}
-{#        <div class="row">#}
-{#          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">#}
-{#            <div class="h-entry">#}
-{#              <a href="single.html"><img src="../../lending/media/images/img_1.jpg" alt="Image" class="img-fluid"></a>#}
-{#              <h2 class="font-size-regular"><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>#}
-{#              <div class="meta mb-4">Ham Brook <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="single.html">News</a></div>#}
-{#              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>#}
-{#              <p><a href="single.html">Continue Reading...</a></p>#}
-{#            </div> #}
-{#          </div>#}
-{#          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">#}
-{#            <div class="h-entry">#}
-{#              <a href="single.html"><img src="../../lending/media/images/img_2.jpg" alt="Image" class="img-fluid"></a>#}
-{#              <h2 class="font-size-regular"><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>#}
-{#              <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="single.html">News</a></div>#}
-{#              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>#}
-{#              <p><a href="single.html">Continue Reading...</a></p>#}
-{#            </div>#}
-{#          </div>#}
-{#          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">#}
-{#            <div class="h-entry">#}
-{#              <a href="single.html"><img src="../../lending/media/images/img_1.jpg" alt="Image" class="img-fluid"></a>#}
-{#              <h2 class="font-size-regular"><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>#}
-{#              <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="single.html">News</a></div>#}
-{#              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>#}
-{#              <p><a href="single.html">Continue Reading...</a></p>#}
-{#            </div> #}
-{#          </div>#}
-{#          #}
         </div>
       </div>
     </section>
-
-
-
 
     <section class="site-section col-12 bg-light" id="contact-section">
       <div class="container">
@@ -401,14 +157,12 @@
             <h2 class="section-title mb-3">НАШИ КОНТАКТЫ</h2>
           </div>
         </div>
-        <div class="row">
-
 {#+++++++++++++++++++++++++++++++++++++++++++++ Форма сообщения ++++++++++++++++++++++++++++++++++++++++++++++++++++++#}
+        <div class="row">
           <div class="col-md-7 mb-5">
-            <form action="{% url 'message_sent' %}" class="p-5 bg-white">
-
+            <form action="{% url 'message_sent' %}" class="p-5 bg-white" method="get">
+                {% csrf_token %}
               <h2 class="h4 text-black mb-5">Форма обратной связи</h2>
-
               <div class="row form-group">
 {#                <div class="col-md-6 mb-3 mb-md-0">#}
                 <div class="col-md-12">
@@ -420,55 +174,42 @@
 {#                  <input type="text" id="lname" class="form-control">#}
 {#                </div>#}
               </div>
-
               <div class="row form-group">
-
                 <div class="col-md-12">
                   <label class="text-black" for="email">Ваша электронная почта</label>
                   <input type="email" id="email" class="form-control">
                 </div>
               </div>
-
               <div class="row form-group">
-
                 <div class="col-md-12">
                   <label class="text-black" for="subject">Тема</label>
                   <input type="text" id="subject" class="form-control">
                 </div>
               </div>
-
               <div class="row form-group">
                 <div class="col-md-12">
                   <label class="text-black" for="message">Сообщение</label>
                   <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Напишите ваши вопросы здесь..."></textarea>
                 </div>
               </div>
-
               <div class="row form-group">
                 <div class="col-md-12">
                   <input type="submit" value="Отправить сообщение" class="btn btn-primary btn-md text-white">
                 </div>
               </div>
-
-
             </form>
           </div>
 {#--------------------------------------------- Форма сообщения ------------------------------------------------------#}
 
           <div class="col-md-5">
-
             <div class="p-4 mb-3 bg-white">
 {#              <p class="mb-0 font-weight-bold">Address</p>#}
 {#              <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>#}
-
               <p class="mb-0 font-weight-bold">Телефон</p>
               <p class="mb-4"><a href="#">+7 900 000 00 00</a></p>
-
               <p class="mb-0 font-weight-bold">Наша электронная почта</p>
               <p class="mb-0"><a href="#">businesservice@abkey.ru</a></p>
-
             </div>
-
           </div>
         </div>
       </div>
@@ -496,29 +237,6 @@
 {##}
 {#            </div>#}
           </div>
-{#          <div class="col-md-4">#}
-{#            <div class="mb-4">#}
-{#              <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>#}
-{#            <form action="#" method="post" class="footer-subscribe">#}
-{#              <div class="input-group mb-3">#}
-{#                <input type="text" class="form-control border-secondary text-white bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">#}
-{#                <div class="input-group-append">#}
-{#                  <button class="btn btn-primary text-black" type="button" id="button-addon2">Send</button>#}
-{#                </div>#}
-{#              </div>#}
-{#            </form>#}
-{#            </div>#}
-{##}
-{#            <div class="">#}
-{#              <h2 class="footer-heading mb-4">Follow Us</h2>#}
-{#                <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>#}
-{#                <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>#}
-{#                <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>#}
-{#                <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>#}
-{#            </div>#}
-{##}
-{##}
-{#          </div>#}
         </div>
         <div class="row pt-1 mt-1 text-center">
           <div class="col-md-12">
@@ -530,13 +248,10 @@
       </p>
             </div>
           </div>
-
         </div>
       </div>
     </footer>
-
   </div> <!-- .site-wrap -->
-
   <script src="{% static 'jquery-3.3.1.min.js' %}"></script>
   <script src="{% static 'jquery-migrate-3.0.1.min.js' %}"></script>
   <script src="{% static 'jquery-ui.js' %}"></script>
