--- a/templates/lending/index.html
+++ b/templates/lending/index.html
@@ -160,7 +160,7 @@
 {#+++++++++++++++++++++++++++++++++++++++++++++ Форма сообщения ++++++++++++++++++++++++++++++++++++++++++++++++++++++#}
         <div class="row">
           <div class="col-md-7 mb-5">
-            <form action="{% url 'message_sent' %}" class="p-5 bg-white" method="get">
+            <form action="{% url 'index' %}" class="p-5 bg-white" method="get">
                 {% csrf_token %}
               <h2 class="h4 text-black mb-5">Форма обратной связи</h2>
               <div class="row form-group">
