--- a/templates/lending/index.html
+++ b/templates/lending/index.html
@@ -115,8 +115,8 @@
               <div class="unit-4-icon mr-4"><span class="text-primary icon-autorenew"></span></div>
               <div>
                 <h3>Cоставление бизнес-плана</h3>
-                  <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+{#                  <br>#}
+                <p>Бизнес - план под любую деятельность с аналитикой рынка, расчётом финансовых показателей</p>
 {#                <p><a href="#">Learn More</a></p>#}
               </div>
             </div>
@@ -126,7 +126,7 @@
               <div class="unit-4-icon mr-4"><span class="text-primary icon-backspace"></span></div>
               <div>
                 <h3>Аналитика экспорта/импорта по коду ТН ВЭД</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+                <p>Предоставление обработанной информации по коду ТН ВЭД.</p>
 {#                <p><a href="#">Learn More</a></p>#}
               </div>
             </div>
@@ -167,7 +167,15 @@
               <h2 class="h4 text-black mb-5">Форма обратной связи</h2>
               <div class="row form-group">
 {#                <div class="col-md-6 mb-3 mb-md-0">#}
-
+                  <span style="color: green">
+                  {% if messages %}
+                    <ul class="messages">
+                        {% for message in messages %}
+                            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                  {% endif %}
+              </span>
                 <div class="col-md-12">
                     {% bootstrap_field form.name_user placeholder=' '%}
 {#                  <label class="text-black" for="fname">Имя</label>#}
@@ -206,6 +214,7 @@
                 </div>
               </div>
             </form>
+
           </div>
 {#--------------------------------------------- Форма сообщения ------------------------------------------------------#}
 
@@ -274,6 +283,7 @@
   <script src="{% static 'jquery.fancybox.min.js' %}"></script>
   <script src="{% static 'jquery.sticky.js' %}"></script>
   <script src="{% static 'main.js' %}"></script>
-{# https://django-bootstrap4.readthedocs.io/en/latest/#}
+{#  https://django-bootstrap4.readthedocs.io/en/latest/ #}
+{#  https://django-simple-captcha.readthedocs.io/en/latest/advanced.html#configuration-toggles #}
   </body>
 </html>
